[package]
name = "skill-system-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.0"
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", commit = "593f85586983eae86015c21beb28f52ac270d96e" }
strum = "0.23.0"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3